// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applySchemaMigrationsToFields deleteField > nested component 1`] = `
{
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child": {
              "child": null,
              "type": "ValueItem",
            },
            "type": "ValueItem",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
  "valueItem": null,
  "valueItemList": null,
}
`;

exports[`applySchemaMigrationsToFields deleteType > component in rich text 1`] = `
{
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
  "valueItem": null,
  "valueItemList": null,
}
`;

exports[`applySchemaMigrationsToFields deleteType > component list 1`] = `
{
  "richText": null,
  "valueItem": null,
  "valueItemList": null,
}
`;

exports[`applySchemaMigrationsToFields deleteType > nested component 1`] = `
{
  "richText": null,
  "valueItem": null,
  "valueItemList": null,
}
`;

exports[`applySchemaMigrationsToFields renameField > component in rich text 1`] = `
{
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child2": {
              "child2": null,
              "string2": "1.1",
              "type": "ValueItem",
            },
            "string2": "1",
            "type": "ValueItem",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
  "valueItem": null,
  "valueItemList": null,
}
`;

exports[`applySchemaMigrationsToFields renameType > component in rich text 1`] = `
{
  "richText": {
    "root": {
      "children": [
        {
          "children": [
            {
              "detail": 0,
              "format": 0,
              "mode": "normal",
              "style": "",
              "text": "Heading 1",
              "type": "text",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "tag": "h1",
          "type": "heading",
          "version": 1,
        },
        {
          "data": {
            "child": {
              "child": null,
              "string": "1.1",
              "type": "ValueItem2",
            },
            "string": "1",
            "type": "ValueItem2",
          },
          "format": "",
          "type": "component",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
  },
  "valueItem": null,
  "valueItemList": null,
}
`;
